changes in buildspec

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,8 +11,8 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t $REPOSITORY_URI:latest .
-      - docker tag service1:latest $REPOSITORY_URI:latest
+      - docker build -t service2 .
+      - docker tag service2:latest $REPOSITORY_URI:latest
   post_build:
     commands:
       - echo Build completed on `date`
